eventually fixed repeating css z-index plans bug

--- a/dev/styles.css
+++ b/dev/styles.css
@@ -6,7 +6,7 @@
 
 div[plan_id] {
     position: relative;
-    z-index: 0;
+    /*z-index: 0;*/
     margin: 20px 0;
     opacity: 0;
 }
